# api/swagger.yaml
@@ -139,9 +139,9 @@ paths:
   /events/{eventId}:
     get:
       tags:
-      - "book"
-      summary: "Find book by ID"
-      description: "Returns a book"
+      - "event"
+      summary: "Find event by ID"
+      description: "Returns an event"
       operationId: "getEventById"
       produces:
       - "application/json"
@@ -160,6 +160,56 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Book not found"
+      x-swagger-router-controller: "Book"
+  /events/filter:
+    get:
+      tags:
+      - "book"
+      summary: "Find events by month"
+      description: "Returns events by month"
+      operationId: "getEventsByMonth"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "month"
+        in: "query"
+        description: "Month of the events"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/Book"
+        400:
+          description: "Invalid month supplied"
+        404:
+          description: "Events not found"
+      x-swagger-router-controller: "Book"
+  /authors/{authorId}:
+    get:
+      tags:
+      - "author"
+      summary: "Find author by ID"
+      description: "Returns an author"
+      operationId: "getAuthorById"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "authorId"
+        in: "path"
+        description: "ID of event to return"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/Book"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Author not found"
       x-swagger-router-controller: "Book"
   /users/login:
     post:
